<resources>
    <string name="app_name">SPQRisiko</string>
    <string name="insert_names_title">Inserisci i nomi dei giocatori dal primo all\'ultimo\n</string>
    <string name="button1">Genera le province</string>
    <string name="first_name">Primo nome...</string>
    <string name="second_name">Secondo nome...</string>
    <string name="third_name">Terzo nome...</string>
    <string name="fourth_name">Quarto nome...</string>
    <string name="fifth_name">Quinto nome...</string>
    <string name="show_provinces">Mostra Province</string>
    <string name="select_language">Seleziona la lingua</string>
    <string name="Italian">Italiano 🇮🇹</string>
    <string name="english">English 🇬🇧</string>
    <string name="title_provinces_page">Province assegnate ai giocatori</string>
    <string name="player_1">Giocatore 1</string>
    <string name="provinces_player1">Province di Giocatore 1</string>
    <string name="confirm_exit_title">Conferma Uscita</string>
    <string name="confirm_exit_message">Vuoi davvero tornare indietro?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="generate_sfide">Genera le sfide</string>
    <string name="settings">Impostazioni</string>
    <string name="please_enter_all_names">Per favore, inserisci tutti i nomi prima di continuare.</string>
    <string name="provinces_of_player">Province di %1$s</string>
    <string name="see_challenges">Visualizza le sfide</string>

    <string name="CT1_dominate_the_empire">Dominare l\'Impero</string>
    <string name="CT2_control_the_mediterranean">Controllo dei Mari</string>
    <string name="CT3_control_the_atlantic">Controllo dell\'Atlantico</string>
    <string name="CT4_roman_legacy">Eredità Romana</string>
    <string name="CT5_scipio_africanus">Scipione l\'Africano</string>
    <string name="CT6_julius_caesar">Giulio Cesare</string>
    <string name="CT7_paella_and_baguette">Paella e Baguette</string>
    <string name="CT8_return_of_the_gladiator">Ritorno del gladiatore</string>
    <string name="CT9_mediterranean_islander">L\'isolano mediterraneo</string>
    <string name="CT10_greek_emperor">L\'imperatore greco</string>
    <string name="CT11_great_sultan">Il grande sultano</string>
    <string name="CT12_the_trinity">La Trinità</string>
    <string name="CT13_the_pirate">Il pirata</string>
    <string name="CT14_the_warlord">Il guerrafondaio</string>
    <string name="CT15_mark_antony">Marco Antonio</string>

    <string name="C1_dominate_the_empire">Dominare l\'impero: Conquista 16 province e controllale con almeno tre armate ciascuna.</string>
    <string name="C2_control_the_mediterranean">Controllo dei mari: Ottieni il controllo del Mar Mediterraneo.</string>
    <string name="C3_control_the_atlantic">Controllo dell\'Atlantico: Conquista tutte le province costiere dell\'Atlantico avendo almeno due armate in ogni provincia marittima e controllo dei mari nell\'Atlantico.</string>
    <string name="C4_roman_legacy">Eredita\' Romana: Conquista e controlla tutte le province italiane (Cisalpina, Italia, Sardegna, Sicilia, Corsica) con almeno quattro armate ciascuna per tre turni.</string>
    <string name="C5_scipio_africanus">Scipione l\'Africano: Conquista tutte le province africane e mantieni il controllo per almeno tre turni.</string>
    <string name="C6_julius_caesar">Giulio Cesare: Conquista tutte le province della Gallia (Gallia Cisalpina, Gallia Narbonense, Belgica, Germania Inferior) e controllale con almeno due armate ciascuna per due turni.</string>
    <string name="C7_paella_and_baguette">Paella e Baguette: Conquista tutte le province della Francia e della Spagna e mantienile per due turni.</string>
    <string name="C8_return_of_the_gladiator">Ritorno del gladiatore: Conquista 7 province in un unico turno.</string>
    <string name="C9_mediterranean_islander">L\'isolano mediteranneo: Controlla tutte le isole del Mediterraneo con almeno 3 unità ciascuna.</string>
    <string name="C10_greek_emperor">L\'imperatore greco:Controlla tutta l\'Europa orientale.</string>
    <string name="C11_great_sultan">Il grande sultano: Conquista tutta l\'Asia Minore fino all\'Egitto non compreso (non servono le isole).</string>
    <string name="C12_the_trinity">La trinita\': Controlla almeno tre province per ogni continente (Europa, Africa, Asia) avendo almeno due armate in ogni provincia e mantieni il controllo per due turni.</string>
    <string name="C13_the_pirate">Il pirata: Conquista il controllo dei mari in 7 mari oppure possiedi 12 navi.</string>
    <string name="C14_the_warlord">Il guerrafondaio: Conquista 2 territori di ogni giocatore nello stesso turno (all\'inizio del gioco). Per ogni giocatore sconfitto aggiungi 2 territori in totale.</string>
    <string name="C15_mark_antony">Marco Antonio: Conquista la Gallia Narbonese e la Cisalpina, Italia, Egitto e Grecia e mantieni per 2 turni con 3 truppe ciascuna.</string>

    <string name="CC1_dominate_the_empire">Conquista 16 province e controllale con almeno tre armate ciascuna.</string>
    <string name="CC2_control_the_mediterranean">Ottieni il controllo del Mar Mediterraneo.</string>
    <string name="CC3_control_the_atlantic">Conquista tutte le province costiere dell\'Atlantico avendo almeno due armate in ogni provincia marittima e controllo dei mari nell\'Atlantico.</string>
    <string name="CC4_roman_legacy">Conquista e controlla tutte le province italiane (Cisalpina, Italia, Sardegna, Sicilia, Corsica) con almeno quattro armate ciascuna per tre turni.</string>
    <string name="CC5_scipio_africanus">Conquista tutte le province africane e mantieni il controllo per almeno tre turni.</string>
    <string name="CC6_julius_caesar">Conquista tutte le province della Gallia (Gallia Cisalpina, Gallia Narbonense, Belgica, Germania Inferior) e controllale con almeno due armate ciascuna per due turni.</string>
    <string name="CC7_paella_and_baguette">Conquista tutte le province della Francia e della Spagna e mantienile per due turni.</string>
    <string name="CC8_return_of_the_gladiator">Conquista 7 province in un unico turno.</string>
    <string name="CC9_mediterranean_islander">Controlla tutte le isole del Mediterraneo con almeno 3 unità ciascuna.</string>
    <string name="CC10_greek_emperor">Controlla tutta l\'Europa orientale.</string>
    <string name="CC11_great_sultan">Conquista tutta l\'Asia Minore fino all\'Egitto non compreso (non servono le isole).</string>
    <string name="CC12_the_trinity">Controlla almeno tre province per ogni continente (Europa, Africa, Asia) avendo almeno due armate in ogni provincia e mantieni il controllo per due turni.</string>
    <string name="CC13_the_pirate">Conquista il controllo dei mari in 7 mari oppure possiedi 12 navi.</string>
    <string name="CC14_the_warlord">Conquista 2 territori di ogni giocatore nello stesso turno (all\'inizio del gioco). Per ogni giocatore sconfitto aggiungi 2 territori in totale.</string>
    <string name="CC15_mark_antony">Conquista la Gallia Narbonese e la Cisalpina, Italia, Egitto e Grecia e mantieni per 2 turni con 3 truppe ciascuna.</string>

    <string name="title_challenges_page">\nLe sfide\n</string>
    <string name="challenges_assigned">Sfide assegnate</string>
    <string name="show_challenge">Mostra sfida</string>
    <string name="hide_challenge">Nascondi sfida</string>
    <string name="see_rules">Regole</string>


</resources>